--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.google.code.gson:gson:2.8.6"
@@ -61,7 +61,6 @@ dependencies {
 
     def hilt_viewmodels = "1.0.0-alpha03"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_viewmodels"
-    kapt "androidx.hilt:hilt-compiler:$hilt_viewmodels"
 
     def fragment_ktx = "1.2.5"
     implementation "androidx.fragment:fragment-ktx:$fragment_ktx"
